# ChemCS-Constraint_Satisfaction_for_Molecular_Generation

./: CONTRIBUTING.md  README.md  final_report.aux  final_report.out  final_report.tex  pyproject.toml  run_tests.py
backend/: app.py
docs/: README.md  USAGE.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: MoleculeViewer3D.jsx
frontend/src/data/: elements.js
frontend/src/pages/: Benchmark.jsx  ConstraintChecker.jsx  MoleculeLab.jsx  Overview.jsx  Supervisor.jsx  Training.jsx
notebooks/: README.md  demo.ipynb
scripts/: demo.py  make_figures.py
src/chemistry_constraint_satisfaction/: __init__.py
src/chemistry_constraint_satisfaction/constraints/: __init__.py  chemical_axioms.py
src/chemistry_constraint_satisfaction/diffusion/: __init__.py  model.py  supervisor.py  trainer.py  training.py
tests/: test_chemical_axioms.py  test_diffusion_model.py  test_supervisor.py  test_train_and_generate.py  test_training.py
